--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,12 +1,9 @@
-.grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-gap: 5px;
+.card:hover {
+    position: relative;
+    top: -.5em;
+    box-shadow: 0px 4px 4px rgb(120, 1, 255);
 }
 
-.grid div {
+img {
     width: 100%;
-    height: 200px;
-    background-color: lightgrey;
 }
