--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -3,20 +3,6 @@ hr {
     color: lightgray;
 }
 
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(14em, 1fr));
-    grid-template-rows: auto;
-    grid-gap: 2em;
-}
-
-.grid div {
-    padding: 2em;
-    width: 100%;
-    background-color: rgba(211, 211, 211, 0.438);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
 .skills {
     display: flex;
     flex-flow: column;
@@ -30,4 +16,9 @@ hr {
     margin: .2em;
     border-radius: 6px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.skills-card {
+    padding: 2em;
+    background-color: rgba(211, 211, 211, 0.438);
 }
