--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -9,3 +9,10 @@
     width: 100%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+@media only screen and (max-width: 408px) {
+    .grid {
+        grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+        grid-gap: 1em;
+    }
+}
